--- a/src/styles/nft-app-content.css
+++ b/src/styles/nft-app-content.css
@@ -318,8 +318,7 @@
   }
   
   .nft-image-container {
-    min-width: 100%;
-    min-height: 100%;
+    aspect-ratio: 1 / 1;    
     overflow: hidden;
   }
 
