--- a/src/styles/nft-app-content.css
+++ b/src/styles/nft-app-content.css
@@ -177,6 +177,7 @@
     height: 30px;
     outline: none; /* Remove the default focus outline */
     padding: 0 10px;
+    border-radius: 0px;
   }
 
 .NFT-search-input::-webkit-outer-spin-button,
@@ -190,25 +191,6 @@
   -moz-appearance: textfield;
 }
   
-  .escape-icon {
-    display: flex; /* Allows setting width and height */
-    width: 26px; /* Adjusted width to accommodate for border within a 20x20px box */
-    height: 26px; /* Adjusted height for the same reason */
-    background-color: #D3D3D3; /* Light grey background */
-    box-shadow: none; /* No shadow to save space and because it won't be noticeable */
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, sans-serif; /* Uses Arial as the sans-serif font */
-    font-size: 6px; /* Essentially removes the text by setting font size to 0 */
-    user-select: none; /* Prevents text selection */
-    cursor: pointer; /* Changes the cursor to indicate it's clickable */
-    text-decoration: none;
-    color: black;
-  }
-  
-  .escape-icon:active {
-    background-color: #C0C0C0; /* Changes background color to simulate pressing */
-  }
 
   .nri-view {
     display: flex; /* Allows setting width and height */
@@ -234,9 +216,6 @@
   }
 
   .price-view {
-    display: flex; /* Allows setting width and height */
-    width: 26px; /* Adjusted width to accommodate for border within a 20x20px box */
-    height: 26px; /* Adjusted height for the same reason */
     background-color: #598C58; /* Light grey background */
     box-shadow: none; /* No shadow to save space and because it won't be noticeable */
     align-items: center;
@@ -259,8 +238,7 @@
   .filter-image {
     background-color: rgb(30, 30, 30);
   }
-  
-  
+
   
   /* Adjusting for no shadow due to size, focusing on a simple, clean look */
    
@@ -275,6 +253,33 @@
     gap: 5px;
   }
 
+  .filters-button-container button{
+    display: flex;
+    flex-direction: row;
+    border-radius: 0px;
+    padding: 0px;
+    height: 30px;
+    width: 30px;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+  }
+
+
+  .filters-button-container button:active {
+    background-color: #C0C0C0;
+  }
+
+  /* For when using eyboard short cut, should much button:active */
+  .filters-button-container button.active-simulated {
+    background-color: #ccc;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+  }
+
+  .filters-button-container button:focus{
+    outline: none;
+  }
+
+
+
   .filters-button-container a{
     display: flex;
     flex-direction: row;
@@ -283,8 +288,29 @@
   }
 
   .filters-button-container img{
-    height: 26px;
-    width: 26px;
+    height: 100%;
+    width: 100%;
+  }
+
+
+  .escape-icon {
+    display: flex; /* Allows setting width and height */
+    width: 30px; /* Adjusted width to accommodate for border within a 20x20px box */
+    height: 30px; /* Adjusted height for the same reason */
+    background-color: #D3D3D3; /* Light grey background */
+    box-shadow: none; /* No shadow to save space and because it won't be noticeable */
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif; /* Uses Arial as the sans-serif font */
+    font-size: 6px; /* Essentially removes the text by setting font size to 0 */
+    user-select: none; /* Prevents text selection */
+    cursor: pointer; /* Changes the cursor to indicate it's clickable */
+    text-decoration: none;
+    color: black;
+  }
+
+  .view-mode-icon {
+
   }
 
   .layer-view{
